hw2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: health-server-deployment
spec:
    replicas: 2
    selector:
       matchLabels:
          app: health-server-app
    template:
       metadata:
          labels:
             app: health-server-app
       spec:
          containers:
          - name: health-server
            image: alanlom/health-server:1.1
            ports:
              - name: web
                containerPort: 8000
            livenessProbe:
              httpGet:
                port: 8000
                path: /health
              initialDelaySeconds: 10
              periodSeconds: 5
              timeoutSeconds: 2
            readinessProbe:
              httpGet:
                port: 8000
                path: /health
              initialDelaySeconds: 10
              periodSeconds: 5
